--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
         <aside class="sidebar">
             <h3>Trending Now</h3>
             <p style="color: #444; margin-top: 10px;">Sidebar content goes here...</p>
+            <script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
         </aside>
     </div>
 
@@ -332,3 +333,4 @@
 </body>
 </index>
 </html>
+
