--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="game-title">Grand Theft Auto (SanAndreas)<h6>For pc  [Paid]</h6></div>
                     <div class="game-info">Size: 3.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://www.rockstargames.com/games/sanandreas"target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://shrinkme.click/Auxf8"target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -333,4 +333,5 @@
 </body>
 </index>
 </html>
+
 
