--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="game-title">Granny 4 The Rebellion<h6>For pc [Free]</h6></div>
                     <div class="game-info">Size: 200 MB</div>
                     <div class="rating">★ ★ ★ ★ ★ 7.7</div>
-                    <a href="https://www.mediafire.com/file/uqe7kihg259dxli/granny-4-the-rebellion-v1.1.3-pc.zip/file " target="_blank"class="download-btn">DOWNLOAD</a>
+                    <a href="https://shrinkme.click/MXxJQ " target="_blank"class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
             <div class="game-card">
@@ -333,5 +333,6 @@
 </body>
 </index>
 </html>
+
 
 
