--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <div class="game-title">Granny 5 Time To Wake Up<h6>For pc [Free]</h6></div>
                     <div class="game-info">Size: 6.5 GB</div>
                     <div class="rating">★ ★ ★ ☆ ☆ 9.3</div>
-                    <a href="https://gamejolt.com/games/granny5/759812  "target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://shrinkme.click/TOukmeF "target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 <div class="game-card">
@@ -310,7 +310,7 @@
                     <div class="game-title"> SatrRupture<h6>For pc [Free]</h6></div>
                     <div class="game-info">Size: 27.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://go.zovo.ink/F8sjyOI " target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
         </div>    
@@ -333,6 +333,7 @@
 </body>
 </index>
 </html>
+
 
 
 
