--- a/index.html
+++ b/index.html
@@ -274,6 +274,29 @@
                     <a href="https://shrinkme.click/MXxJQ" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
+             <div class="game-card">
+                <div class="game-img">
+                    <img src="5.jpeg" alt="Game 3">
+                </div>
+                <div class="game-details">
+                    <div class="game-title">Granny 5 Time To Wake Up<h6>For pc [Free]</h6></div>
+                    <div class="game-info">Size: 6.5 GB</div>
+                    <div class="rating">★ ★ ★ ☆ ☆ 9.3</div>
+                    <a href="https://shrinkme.click/TOukmeF "target="_blank" class="download-btn">DOWNLOAD</a>
+                </div>
+            </div>
+<div class="game-card">
+                <div class="game-img">
+                    <img src="47c33cac4a9431bc157a395095653102.jpg" alt="Game 1">
+                </div>
+                <div class="game-details">
+                    <div class="game-title"> SatrRupture<h6>For pc [Free]</h6></div>
+                    <div class="game-info">Size: 27.6 GB</div>
+                    <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
+                    <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
+                </div>
+            </div>
+        </div>    
             
             </div>    
 
@@ -289,3 +312,4 @@
 
 </body>
 </html>
+
