--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
         /* Game List Items */
         .game-card {
             display: flex;
+    gap: 20px;
+    background: #0a0a0a;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #1a1a1a;
+    transition: 0.3s;
+    margin-bottom: 20px; /* <--- මෙය අලුතින් ඇතුළත් කරන්න */
+
+            display: flex;
             gap: 20px;
             background: #0a0a0a;
             padding: 15px;
@@ -312,4 +321,5 @@
 
 </body>
 </html>
+
 
