--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series 📺</a></li>
             <li><a href="https://wa.me/94777042735" target="_blank">Contact📬</a></li>
         </ul>
-        <input type="text" class="search-bar" placeholder="Search... 🔍">
+        <input type="text" class="search-bar" placeholder="Search... ">
     </nav>
 
     <div class="hero-banner">
@@ -321,5 +321,6 @@
 
 </body>
 </html>
+
 
 
