--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>    
             
             </div>    
-
+<script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
        
 
     <footer>
@@ -328,6 +328,7 @@
 
 </body>
 </html>
+
 
 
 
