--- a/index.html
+++ b/index.html
@@ -340,7 +340,11 @@
                 </div>
             </div>
         </div>    
-            
+            <aside class="sidebar">
+            <h3>Trending Now</h3>
+            <p style="color: #444; margin-top: 10px;">Sidebar content goes here...</p>
+            <script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
+        </aside>
             </div>    
 <script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
        
@@ -351,6 +355,7 @@
 
 </body>
 </html>
+
 
 
 
