--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
+
+        
         body {
             background-color: #000000;
             color: #ffffff;
@@ -260,10 +262,40 @@
             color: #555;
             font-size: 12px;
         }
+
+/* මෙම කොටස </style> ට කලින් ඇතුළත් කරන්න */
+.desktop-only-ads {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .desktop-only-ads {
+        display: block;
+        position: fixed;
+        right: 15px; /* දකුණු පැත්තේ කෙළවරේ සිට දුර */
+        top: 150px;
+        width: 160px; /* ඔබේ දැන්වීමේ පළල අනුව වෙනස් කරන්න */
+        z-index: 1000;
+    }
+    .ad-slot {
+        background: #1a1a1a;
+        padding: 5px;
+        border: 1px solid #444;
+        margin-bottom: 20px;
+    }
+}
+ 
     </style>
 </head>
 <body>
-
+<div class="desktop-only-ads">
+    <div class="ad-slot">
+        <p style="color:white; font-size:12px;">Advertisement</p> 
+    </div>
+    
+    <div class="ad-slot" style="margin-top: 20px;">
+        </div>
+</div>
     <header>
         <div class="logo-section">
             <div class="logo-box">
@@ -355,6 +387,7 @@
 
 </body>
 </html>
+
 
 
 
