--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             font-size: 12px;
         }
 
-/* මෙම කොටස </style> ට කලින් ඇතුළත් කරන්න */
+/* මෙම කොටසට කලින් ඇතුළත් කරන්න */
 .desktop-only-ads {
     display: none;
 }
@@ -387,6 +387,7 @@
 
 </body>
 </html>
+
 
 
 
