--- a/index.html
+++ b/index.html
@@ -367,11 +367,12 @@
                 </div>
             </div>
         </div>    
-            <aside class="sidebar">
-            <h3>Trending Now</h3>
-            <p style="color: #444; margin-top: 10px;">Sidebar content goes here...</p>
-            <script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
-        </aside>
+          <aside class="sidebar desktop-only-ads">
+    <h3>Trending Now</h3>
+    <p style="color: #444; margin-top: 10px;">Advertisement</p>
+    
+    <script src="https://p128478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058..."></script>
+</aside>
             </div>    
 <script src="https://pl28478999.effectivegatecpm.com/fa/4e/4d/fa4e4d645c058d51e2098fbc82944d61.js"></script>
        
@@ -382,6 +383,7 @@
 
 </body>
 </html>
+
 
 
 
