--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@
         <input type="text" class="search-bar" placeholder="Search... ">
     </nav>
 
+    <div style="text-align: center; margin-top: 20px;">
+        <a href="app-release.apk" download="BlackStore.apk" 
+           style="background-color: #FFD700; color: #000; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; font-family: sans-serif; display: inline-block; border: 2px solid #fff; box-shadow: 0 4px 10px rgba(255,215,0,0.3);">
+           📥 DOWNLOAD OUR APP (APK)
+        </a>
+    </div>
+
     <div class="hero-banner">
         <img src="www.jpg" alt="Featured Content">
     </div>
@@ -361,7 +368,7 @@
                 </div>
                 <div class="game-details">
                     <div class="game-title"> SatrRupture<h6>For pc [Free]</h6></div>
-                    <div class="game-info">Size: 27.6 GB</div>
+                    <div class="game-info">Size: 27 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
                     <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
