--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <div style="text-align: center; margin-top: 20px;">
         <a href="app-release.apk" download="BlackStore.apk" 
-           style="background-color: #FFD700; color: #000; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; font-family: sans-serif; display: inline-block; border: 2px solid #fff; box-shadow: 0 4px 10px rgba(255,215,0,0.3);">
+           style="background-color: #000000; color: #ffffff; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; font-family: sans-serif; display: inline-block; border: 2px solid #fff; box-shadow: 0 4px 10px rgba(255,215,0,0.3);">
            📥 DOWNLOAD OUR APP (APK)
         </a>
     </div>
@@ -390,6 +390,7 @@
 
 </body>
 </html>
+
 
 
 
