--- a/index.html
+++ b/index.html
@@ -280,6 +280,20 @@
     }
 }
 
+/* --- අලුතින් එක් කළ කොටස: PC එකේදී ඩවුන්ලෝඩ් බොත්තම හැංගීමට --- */
+.mobile-only-btn {
+    display: none; /* සාමාන්‍යයෙන් හංගන්න (PC) */
+}
+
+@media screen and (max-width: 768px) {
+    .mobile-only-btn {
+        display: block; /* ෆෝන් එකේදී පමණක් පෙන්වන්න */
+        text-align: center;
+        margin-top: 20px;
+    }
+}
+/* ----------------------------------------------------------- */
+
     </style>
 </head>
 <body>
@@ -311,7 +325,7 @@
         <input type="text" id="gameSearch" class="search-bar" placeholder="Search Games...">
     </nav>
 
-    <div style="text-align: center; margin-top: 20px;">
+    <div class="mobile-only-btn">
         <a href="app-release.apk" download="BlackStore.apk" 
            style="background-color: #000000; color: #ffffff; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; font-family: sans-serif; display: inline-block; border: 2px solid #fff; box-shadow: 0 4px 10px rgba(255,215,0,0.3);">
            📥 DOWNLOAD OUR APP (APK)
@@ -406,3 +420,4 @@
 
 </body>
 </html>
+
