--- a/index.html
+++ b/index.html
@@ -428,6 +428,14 @@
                 <a href="#" style="color: #fff; font-size: 10px;">Contact Now ↗</a>
             </div>
 
+<div class="ad-container">
+                <div class="ad-box">
+                    <img src="ad2.jpg" alt="Ad Image 2"> </div>
+                <p style="font-size: 11px; color: #aaa;">Your Service Here</p>
+                <a href="#" style="color: #fff; font-size: 10px;">Contact Now ↗</a>
+            </div>
+
+            
             <a href="https://wa.me/94777042735" target="_blank" class="place-ad-btn">
                 PLACE YOUR AD HERE (PAID)
             </a>
@@ -461,6 +469,7 @@
 
 </body>
 </html>
+
 
 
 
