--- a/index.html
+++ b/index.html
@@ -430,11 +430,17 @@
 
 <div class="ad-container">
                 <div class="ad-box">
-                    <img src="ad2.jpg" alt="Ad Image 2"> </div>
+                    <img src="ad3.jpg" alt="Ad Image 3"> </div>
                 <p style="font-size: 11px; color: #aaa;">Your Service Here</p>
                 <a href="#" style="color: #fff; font-size: 10px;">Contact Now ↗</a>
             </div>
 
+            <div class="ad-container">
+                <div class="ad-box">
+                    <img src="ad4.jpg" alt="Ad Image 4"> </div>
+                <p style="font-size: 11px; color: #aaa;">Your Service Here</p>
+                <a href="#" style="color: #fff; font-size: 10px;">Contact Now ↗</a>
+            </div>
             
             <a href="https://wa.me/94777042735" target="_blank" class="place-ad-btn">
                 PLACE YOUR AD HERE (PAID)
@@ -469,6 +475,7 @@
 
 </body>
 </html>
+
 
 
 
