--- a/index.html
+++ b/index.html
@@ -409,6 +409,18 @@
                     <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
+
+<div class="game-card">
+                <div class="game-img">
+                    <img src="47c33cac4a9431bc157a395095653102.jpg" alt="Game  5">
+                </div>
+                <div class="game-details">
+                    <div class="game-title"> SatrRupture<h6>For pc [Free]</h6></div>
+                    <div class="game-info">Size: 27 GB</div>
+                    <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
+                    <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
+                </div>
+            </div>     
         </div>    
         
         <aside class="sidebar desktop-only-ads">
@@ -475,6 +487,7 @@
 
 </body>
 </html>
+
 
 
 
