--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             display: grid;
             grid-template-columns: 1fr; /* මුලින්ම එක තීරුවක් (Mobile First) */
             gap: 20px;
+            align-items: start; /* Sidebar සහ Game cards එකම මට්ටමට තබයි */
         }
 
         /* Game List Items */
@@ -217,9 +218,9 @@
         }
 
         /* Desktop Layout (ලැප්ටොප් සඳහා) */
-        @media (min-width: 769px) {
+        @media (min-width: 1024px) {
             .container {
-                grid-template-columns: 2.5fr 1.2fr;
+                grid-template-columns: 2.5fr 1fr; /* දෙපස සමබර කළා */
             }
             nav {
                 flex-direction: row;
@@ -297,7 +298,7 @@
 }
 .ad-box {
     width: 100%;
-    height: 120px;
+    height: 150px; /* උස මදක් වැඩි කළා */
     background: #000;
     margin-bottom: 10px;
     display: flex;
@@ -320,6 +321,27 @@
     font-weight: bold;
     border-radius: 4px;
     margin-top: 10px;
+}
+
+/* More Games Button Style */
+.more-games-btn {
+    display: block;
+    width: 250px;
+    margin: 30px auto;
+    padding: 15px;
+    text-align: center;
+    background: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.3s;
+}
+.more-games-btn:hover {
+    background: #fff;
+    color: #000;
 }
 /* -------------------------------- */
 
@@ -398,7 +420,7 @@
                     <a href="https://shrinkme.click/TOukmeF "target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
-<div class="game-card">
+            <div class="game-card">
                 <div class="game-img">
                     <img src="47c33cac4a9431bc157a395095653102.jpg" alt="Game 1">
                 </div>
@@ -409,6 +431,8 @@
                     <a href="https://shrinkme.click/hmibvUpV " target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
+
+            <a href="store.html" class="more-games-btn">See More Games ➔</a>
         </div>    
         
         <aside class="sidebar desktop-only-ads">
@@ -461,6 +485,8 @@
 
 </body>
 </html>
+
+
 
 
 
