--- a/store.html
+++ b/store.html
@@ -261,7 +261,37 @@
                     <a href="https://shrinkme.click/hmibvUpV" class="mini-download-btn">DOWNLOAD</a>
                 </div>
             </div>
+ <div class="game-item">
+                <img src="add " alt="StarRupture">
+                <div class="game-info">
+                    <h3> add </h3>
+                    <a href="https://shrinkme.click/hmibvUpV" class="mini-download-btn">DOWNLOAD</a>
+                </div>
+            </div>
 
+ <div class="game-item">
+                <img src=" add" alt="StarRupture">
+                <div class="game-info">
+                    <h3>add </h3>
+                    <a href="https://shrinkme.click/hmibvUpV" class="mini-download-btn">DOWNLOAD</a>
+                </div>
+            </div>
+
+ <div class="game-item">
+                <img src="add" alt="StarRupture">
+                <div class="game-info">
+                    <h3> add </h3>
+                    <a href="https://shrinkme.click/hmibvUpV" class="mini-download-btn">DOWNLOAD</a>
+                </div>
+            </div>
+ <div class="game-item">
+                <img src="add " alt="StarRupture">
+                <div class="game-info">
+                    <h3>add</h3>
+                    <a href="https://shrinkme.click/hmibvUpV" class="mini-download-btn">DOWNLOAD</a>
+                </div>
+            </div>
+            
             </div>
     </div>
 
@@ -288,3 +318,4 @@
 
 </body>
 </html>
+
