--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Pamod Yoshitha Abeyrathna">
     <meta name="robots" content="index, follow">
 
-    <meta name="google-site-verification" content="ENTER_YOUR_CODE_HERE" />
+    <meta name="google-site-verification" content=" <meta name="google-site-verification" content="I_WJEb_Iup7UacRZn8arH6MBIacvp-h1hq0tMP-ev6s" /> " />
 
     <style>
         /* CSS Design - Black & White Premium Theme */
@@ -457,3 +457,4 @@
 
 </body>
 </html>
+
