--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <meta name="keywords" content="Black Store, Black Store.lk, Download Games Sri Lanka, PC Games Download, Free Movies, BlackStore">
     <meta name="author" content="Pamod Yoshitha Abeyrathna">
     <meta name="robots" content="index, follow">
-
-    <meta name="google-site-verification" content=" <meta name="google-site-verification" content="I_WJEb_Iup7UacRZn8arH6MBIacvp-h1hq0tMP-ev6s" /> " />
-
+<meta name="google-site-verification" content="I_WJEb_Iup7UacRZn8arH6MBIacvp-h1hq0tMP-ev6s" />
+    
     <style>
         /* CSS Design - Black & White Premium Theme */
         * {
@@ -457,4 +456,5 @@
 
 </body>
 </html>
+
 
