--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index, follow">
 
     <meta name="google-site-verification" content="I_WJEb_Iup7UacRZn8arH6MBIacvp-h1hq0tMP-ev6s" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/BLACK_STORE.LK/sitemap.xml" />
     <style>
         /* CSS Design - Black & White Premium Theme */
         * {
@@ -456,6 +457,7 @@
 
 </body>
 </html>
+
 
 
 
