--- a/index.html
+++ b/index.html
@@ -212,18 +212,38 @@
             }
         }
 
+        /* ෆෝන් එකට අදාළ වෙනස්කම් මෙහි ඇත */
         @media (max-width: 480px) {
+            .main-content {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 10px;
+                justify-content: space-between;
+            }
             .game-card {
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
+                width: 48%; /* එක පේළියකට දෙකක් පෙන්වයි */
+                padding: 10px;
+                margin-bottom: 10px;
+                gap: 10px;
             }
             .game-img {
                 width: 100%;
-                height: 200px;
+                height: 120px; /* පින්තූරය කුඩා විය යුතුය */
+            }
+            .game-title {
+                font-size: 14px; /* අකුරු ප්‍රමාණය ගැලපීම */
+            }
+            .game-info, .rating {
+                font-size: 10px;
             }
             .download-btn {
-                margin: 10px auto;
+                margin: 5px auto;
+                padding: 4px 10px;
+                font-size: 10px;
+                width: 100%;
             }
         }
 
@@ -351,7 +371,7 @@
 
     <div class="container">
         <div class="main-content">
-            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px;">GAMES</h2>
+            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%;">GAMES</h2>
 
             <div class="game-card">
                 <div class="game-img">
@@ -405,7 +425,7 @@
                 </div>
             </div>
 
-            <a href="store.html" class="more-games-btn">See More Games ➔</a>
+            <a href="store.html" class="more-games-btn" style="width: 100%;">See More Games </a>
         </div>    
         
         <aside class="sidebar desktop-only-ads">
@@ -457,7 +477,3 @@
 
 </body>
 </html>
-
-
-
-
