--- a/store.html
+++ b/store.html
@@ -219,6 +219,7 @@
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Home 🏠</a></li>
+            <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
             <li><a href="https://wa.me/94777042735" target="_blank">Contact 📬</a></li>
         </ul>
         <input type="text" id="storeSearch" class="search-bar" placeholder="Search All Games...">
@@ -318,3 +319,4 @@
 
 </body>
 </html>
+
